deployment/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bookstore-api
  labels:
    name: bookstore-api
    environment: production
